# Stash

./: .gitignore  README.md  STASH-AI-PLAN.md  stash-ai-mockup.html  stash-pitch-deck.html
.github/: FUNDING.yml
rinse/: .gitignore  README.md  package-lock.json  package.json
rinse/src-tauri/: Cargo.toml  tauri.conf.json
rinse/src-tauri/capabilities/: default.json
rinse/src-tauri/src/: clean.rs  main.rs
rinse/ui/: index.html
snag/: README.md  package-lock.json  package.json
snag/src-tauri/: Cargo.toml  tauri.conf.json
snag/src-tauri/capabilities/: default.json
snag/src-tauri/icons/: icon.icns
snag/src-tauri/src/: main.rs
snag/ui/: index.html
stash/: README.md  manifest.json  popup.html  popup.js
stash-desktop/: package-lock.json  package.json
stash-desktop/src-tauri/: Cargo.toml  tauri.conf.json
stash-desktop/src-tauri/capabilities/: default.json
stash-desktop/src-tauri/icons/: icon.icns
stash-desktop/src-tauri/src/: main.rs
stash-desktop/ui/: index.html
stash-landing/: index.html
