[package]
name = "rinse"
version = "0.1.0"
description = "Paste clean text with one hotkey"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
arboard = "3"
enigo = "0.6"
once_cell = "1"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
